--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <h1>All Japan Kendo Championship Bracket</h1>
 
         <div class="instructions">
-            <strong>How to play:</strong> Enter your name, click through the bracket to make your predictions, then save your bracket. When the actual results are in, an admin can enter them to see who predicted best!
+            <strong>How to play:</strong> Enter your name, click through the bracket to make your predictions, then save your bracket. When the actual results are in, we'll be able to see who predicted best!
         </div>
 
         <div class="controls">
