--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <h1>All Japan Kendo Championship Bracket</h1>
 
         <div class="instructions">
-            <strong>How to play:</strong> Enter your name, click through the bracket to make your predictions, then save your bracket. When the actual results are in, the leaderboard will show who had the closest bracket!
+            <strong>How to play:</strong> Enter your name, click through the bracket to make your predictions, then save your bracket. When the actual results are in, the leaderboard will show who had the closest bracket! Bracket will lock once tournament begins.
         </div>
 
         <div class="controls">
