--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                     { name: 'H.HOSHINO', prefecture: 'Gunma', seed: 5 },
                     { name: 'T.YAMAZAKI', prefecture: 'Ishikawa', seed: 5 },
                     { name: 'N.TASHIRO', prefecture: 'Fukuoka', seed: 4 },
-                    { name: 'Y.JITO', prefecture: 'Saitama', seed: 4 },
+                    { name: 'Y.ITO', prefecture: 'Saitama', seed: 4 },
                     { name: 'H.ISHIDA', prefecture: 'Yamagata', seed: 5 },
                     { name: 'R.SEIKE', prefecture: 'Osaka', seed: 5 },
                     { name: 'K.MUKUNASHI', prefecture: 'Tokyo', seed: 5 },
@@ -537,9 +537,9 @@
                     { name: 'Y.YAMAGUCHI', prefecture: 'Yamanashi', seed: 6 },
                     { name: 'Y.NOMURA', prefecture: 'Kanagawa', seed: 'R7' },
                     { name: 'T.YAMURA', prefecture: 'Yamaguchi', seed: 5 },
-                    { name: 'K.HORIURO', prefecture: 'Tokyo', seed: 5 },
+                    { name: 'K.HOSHIKO', prefecture: 'Tokyo', seed: 5 },
                     { name: 'T.TSURUHAMA', prefecture: 'Osaka', seed: 2 },
-                    { name: 'Y.JITO', prefecture: 'Gifu', seed: 5 },
+                    { name: 'Y.ITO', prefecture: 'Gifu', seed: 5 },
                     { name: 'S.IZAWA', prefecture: 'Hokkaido', seed: 6 },
                     { name: 'Y.SASAKI', prefecture: 'Chiba', seed: 5 },
                     { name: 'R.NISHIDA', prefecture: 'Tokushima', seed: 6 },
