--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     { name: 'R.KUNITOMO', prefecture: 'Fukuoka', seed: 'R6' },
                     { name: 'Y.NAKANE', prefecture: 'Ibaraki', seed: 5 },
                     { name: 'S.NISHIZAWA', prefecture: 'Nagano', seed: 5 },
-                    { name: 'Y.TAKENOCHI', prefecture: 'Tokyo', seed: 6 },
+                    { name: 'Y.TAKENOUCHI', prefecture: 'Tokyo', seed: 6 },
                     { name: 'S.MAEDA', prefecture: 'Hyogo', seed: 6 },
                     { name: 'Y.MATSUOKA', prefecture: 'Mie', seed: 5 },
                     { name: 'R.KAMOI', prefecture: 'Okayama', seed: 5 },
