--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                     { name: 'R.NISHIDA', prefecture: 'Tokushima', rank: 6 },
                     { name: 'S.OGURA', prefecture: 'Wakayama', rank: 5 },
                     { name: 'M.FURUDATE', prefecture: 'Iwate', rank: 'R7' },
-                    { name: 'S.AREMATSU', prefecture: 'Saitama', rank: 6 },
+                    { name: 'S.ABEMATSU', prefecture: 'Saitama', rank: 6 },
                     { name: 'S.TOMITA', prefecture: 'Fukui', rank: 6 },
                     { name: 'R.GOYA', prefecture: 'Kyoto', rank: 'R6' },
                     { name: 'R.IKEDA', prefecture: 'Fukuoka', rank: 4 }
