--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                     { name: 'A.ONIZUKA', prefecture: 'Chiba', rank: 5 },
                     { name: 'N.KIFA', prefecture: 'Okinawa', rank: 4 },
                     { name: 'Y.MIYABE', prefecture: 'Shiga', rank: 3 },
-                    { name: 'S.OTA', prefecture: 'Aomori', rank: 4 },
+                    { name: 'S.AWAJI', prefecture: 'Aomori', rank: 4 },
                     { name: 'M.SENO', prefecture: 'Fukuoka', rank: 5 },
                     { name: 'A.NISHIO', prefecture: 'Kochi', rank: 4 },
                     { name: 'K.MORIYAMA', prefecture: 'Shimane', rank: 6 },
